--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ MONGO_URI=mongodb+srv://admin:admin@cluster0.8oe2uw2.mongodb.net/
 
 JWT_SECRET=secretkey
 PORT=5000
+
+REACT_APP_API_URL=https://louininventory-890420967859.asia-southeast2.run.app/api
